--- a/views/new-user.ejs
+++ b/views/new-user.ejs
@@ -7,6 +7,7 @@
   <title>New Profile</title>
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/profiles.css">
+  <script defer src="/scripts/file-preview.js"></script>
 </head>
 <body>
   <main id="new-user">
@@ -16,8 +17,9 @@
         <input type="text" id="username" name="username" required >
       </div>
       <div class="form-control">
+        <img id="image-preview" src="" alt="선택한 이미지">
         <label for="image">User image</label>
-        <input type="file" id="image" name="image" required >
+        <input type="file" id="image" name="image" required accept="image/jpg, image/png" >
       </div>
       <button class="btn">Save User</button>
     </form>
